--- a/Project1_Contact.html
+++ b/Project1_Contact.html
@@ -82,6 +82,17 @@
                         }			
 
             </style>
+			
+			<script>
+			function validateForm() {
+			    var x = document.forms["myForm"]["fname"].value;
+  			  if (x == null || x == "") {
+   			     alert("Name must be filled out");
+   			     return false;
+   			 }
+			}
+			</script>
+			
       </head>
 
       <body>
@@ -117,11 +128,19 @@
 			   <p class="one" style="font-family:courier;font-size:125%;text-align:center;"><b>  
 			     Phone# 216-225-3374 <br>                          
 				 Email: krishna_2644@yahoo.co.in
+			  <br> <br> <br> <br>
+				 <form name="myForm" action="demo_form.asp"
+			           onsubmit="return validateForm()" method="post">
+			           Name: <input type="text" name="fname">
+			          <input type="submit" value="Submit">
+			     </form>
 			  </b> </p> 			  
 			  
 			</div>
 			
-
+             
+			
+			
 			
       </body>
 </html>
